--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script src="p5/p5.js"></script>
+    <script src="p5/addons/p5.sound.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
