--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="main-nav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
-                >About Me</a
-              >
+              <a class="nav-link" href="#aboutme">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="pricing.html">Skills and Expertise</a>
@@ -59,5 +57,24 @@
         </div>
       </div>
     </nav>
+
+    <main>
+      <section class="container-fluid">
+        <div class="row">
+          <div class="col-md-12" id="aboutme">
+            <br />
+            <header><h1>About Me</h1></header>
+            <hr>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <p>
+              I am a student at Morris County School of Technology. I am in the Computer and Information Science Academy. 
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
