--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ryan Khieu</title>
     <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -45,10 +49,10 @@
               <a class="nav-link" href="#aboutme">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pricing.html">Skills and Expertise</a>
+              <a class="nav-link" href="#skills">Skills and Expertise</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Education</a>
+              <a class="nav-link" href="#education">Education</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Portfolio</a>
@@ -63,15 +67,85 @@
         <div class="row">
           <div class="col-md-12" id="aboutme">
             <br />
-            <header><h1>About Me</h1></header>
-            <hr>
+            <header>
+              <h1><i class="bi bi-person"></i> About Me</h1>
+            </header>
+            <hr />
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <p>
-              I am a student at Morris County School of Technology. I am in the Computer and Information Science Academy. 
+              I am a student at Morris County School of Technology. I am in the
+              Computer and Information Science Academy. I like to code, work
+              with PCs and other hardware, and play video games.
             </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12" id="skills">
+            <br />
+            <header>
+              <h1><i class="bi bi-lightbulb"></i> Skills and Expertise</h1>
+            </header>
+            <hr />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Skill</th>
+                  <th scope="col">Years of Experience</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">Java</th>
+                  <td>1 Year</td>
+                </tr>
+                <tr>
+                  <th scope="row">Python</th>
+                  <td>3 Years</td>
+                </tr>
+                <tr>
+                  <th scope="row">HTML</th>
+                  <td>1 Year</td>
+                </tr>
+                <tr>
+                  <th scope="row">Minecraft Modding</th>
+                  <td>3 Years</td>
+                </tr>
+                <tr>
+                  <th scope="row">UI Design</th>
+                  <td>2 Years</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12" id="education">
+            <br />
+            <header>
+              <h1><i class="bi bi-mortarboard"></i> Education</h1>
+            </header>
+            <hr />
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <h2>
+              Aaron Decker School
+              <small class="text-muted">2014-2019</small>
+            </h2>
+          </div>
+          <div class="col-md-4">
+            
           </div>
         </div>
       </section>
