--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="#education">Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Portfolio</a>
+              <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
           </ul>
         </div>
@@ -138,14 +138,57 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-3">
+            <h6 class="text-muted">
+              Elementary School
+            </h5>
             <h2>
               Aaron Decker School
               <small class="text-muted">2014-2019</small>
             </h2>
           </div>
-          <div class="col-md-4">
-            
+          <div class="col-md-1 float-start ms-1">
+            <img src="imgs/ads.png" alt="Aaron Decker School"/>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-3">
+            <h6 class="text-muted">
+              Middle School
+            </h5>
+            <h2>
+              Richard Butler School
+              <small class="text-muted">2019-2023</small>
+            </h2>
+          </div>
+          <div class="col-md-1 float-start ms-1">
+            <img src="imgs/rbs.jpg" alt="Richard Butler School" height="120" width="120"/>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-md-3">
+            <h6 class="text-muted">
+              High School
+            </h5>
+            <h2>
+              Morris County School of Technology
+              <small class="text-muted">2023-2027</small>
+            </h2>
+          </div>
+          <div class="col-md-1 float-start ms-1">
+            <img src="imgs/mcst.png" alt="Morris County School of Technology" height="97" width="120"/>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12" id="portfolio">
+            <br />
+            <header>
+              <h1><i class="bi bi-briefcase"></i> Portfolio</h1>
+            </header>
+            <hr />
           </div>
         </div>
       </section>
