Add portfolio section

--- a/index.html
+++ b/index.html
@@ -139,46 +139,50 @@
 
         <div class="row">
           <div class="col-md-3">
-            <h6 class="text-muted">
-              Elementary School
-            </h5>
+            <h6 class="text-muted">Elementary School</h6>
             <h2>
               Aaron Decker School
               <small class="text-muted">2014-2019</small>
             </h2>
           </div>
           <div class="col-md-1 float-start ms-1">
-            <img src="imgs/ads.png" alt="Aaron Decker School"/>
+            <img src="imgs/ads.png" alt="Aaron Decker School" />
           </div>
         </div>
-        <br>
+        <br />
         <div class="row">
           <div class="col-md-3">
-            <h6 class="text-muted">
-              Middle School
-            </h5>
+            <h6 class="text-muted">Middle School</h6>
             <h2>
               Richard Butler School
               <small class="text-muted">2019-2023</small>
             </h2>
           </div>
           <div class="col-md-1 float-start ms-1">
-            <img src="imgs/rbs.jpg" alt="Richard Butler School" height="120" width="120"/>
+            <img
+              src="imgs/rbs.jpg"
+              alt="Richard Butler School"
+              height="120"
+              width="120"
+            />
           </div>
         </div>
-        <br>
+        <br />
         <div class="row">
           <div class="col-md-3">
-            <h6 class="text-muted">
-              High School
-            </h5>
+            <h6 class="text-muted">High School</h6>
             <h2>
               Morris County School of Technology
               <small class="text-muted">2023-2027</small>
             </h2>
           </div>
           <div class="col-md-1 float-start ms-1">
-            <img src="imgs/mcst.png" alt="Morris County School of Technology" height="97" width="120"/>
+            <img
+              src="imgs/mcst.png"
+              alt="Morris County School of Technology"
+              height="97"
+              width="120"
+            />
           </div>
         </div>
 
@@ -191,6 +195,37 @@
             <hr />
           </div>
         </div>
+        <div class="row">
+          <div class="btn-group col-md-3">
+            <a href="https://github.com/RyanKhieu" class="btn btn-dark">
+              <i class="bi bi-github"></i> GitHub
+            </a>
+            <a href="https://replit.com/@RyanKhieu" class="btn btn-dark">
+              <img src="imgs/replit.svg" alt="Replit" height="16" width="16" />
+              Replit
+            </a>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3">
+            <h2>Bouncing Balls</h2>
+            <p>
+              Group project from HackMCST. Simulation of two balls bouncing and
+              becoming larger when they collide with a border. Made in
+              JavaScript using p5.js and p5play. Website made with HTML.
+            </p>
+          </div>
+          <div class="col-md-3 float-start ms-1">
+            <img
+              src="imgs/Screenshot 2024-05-23 025506.png"
+              alt="Bouncing Balls"
+              height="225"
+              width="400"
+            />
+          </div>
+        </div>
+        <br />
       </section>
     </main>
   </body>
