Add projects to portfolio section

--- a/index.html
+++ b/index.html
@@ -225,6 +225,25 @@
             />
           </div>
         </div>
+
+        <br />
+
+        <div class="row">
+          <div class="col-md-3">
+            <h2>Character Webstie</h2>
+            <p>
+              Website made with HTML and CSS. Created to demonstrate the use of HTML and CSS to create a website. Website is about a character from a vocaloid software.
+            </p>
+          </div>
+          <div class="col-md-3 float-start ms-1">
+            <img
+              src="imgs/Screenshot 2024-05-23 031923.png"
+              alt="Character Website"
+              height="225"
+              width="400"
+            />
+          </div>
+        </div>
         <br />
       </section>
     </main>
