--- a/index.html
+++ b/index.html
@@ -232,7 +232,9 @@
           <div class="col-md-3">
             <h2>Character Webstie</h2>
             <p>
-              Website made with HTML and CSS. Created to demonstrate the use of HTML and CSS to create a website. Website is about a character from a vocaloid software.
+              Website made with HTML and CSS. Created to demonstrate the use of
+              HTML and CSS to create a website. Website is about a character
+              from a vocaloid software.
             </p>
           </div>
           <div class="col-md-3 float-start ms-1">
