Add comments and rounded image corners

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ Date: 5/21/24
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
-
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"> Ryan Khieu </a>
 
@@ -69,6 +69,7 @@ Date: 5/21/24
 
     <main>
       <section class="container-fluid">
+        <!-- About me -->
         <div class="row">
           <div class="col-md-12" id="aboutme">
             <br />
@@ -88,6 +89,7 @@ Date: 5/21/24
           </div>
         </div>
 
+        <!-- Skills and Expertise -->
         <div class="row">
           <div class="col-md-12" id="skills">
             <br />
@@ -132,6 +134,7 @@ Date: 5/21/24
           </div>
         </div>
 
+        <!-- Education -->
         <div class="row">
           <div class="col-md-12" id="education">
             <br />
@@ -166,6 +169,7 @@ Date: 5/21/24
           <div class="col-md-1 float-start ms-1">
             <img
               src="imgs/rbs.jpg"
+              class="rounded"
               alt="Richard Butler School"
               height="120"
               width="120"
@@ -191,6 +195,7 @@ Date: 5/21/24
           </div>
         </div>
 
+        <!-- Portfolio -->
         <div class="row">
           <div class="col-md-12" id="portfolio">
             <br />
@@ -212,6 +217,8 @@ Date: 5/21/24
           </div>
         </div>
 
+        <br />
+
         <div class="row">
           <div class="col-md-3">
             <h2>Bouncing Balls</h2>
@@ -224,6 +231,7 @@ Date: 5/21/24
           <div class="col-md-3 float-start ms-1">
             <img
               src="imgs/Screenshot 2024-05-23 025506.png"
+              class="rounded"
               alt="Bouncing Balls"
               height="225"
               width="400"
@@ -245,6 +253,7 @@ Date: 5/21/24
           <div class="col-md-3 float-start ms-1">
             <img
               src="imgs/Screenshot 2024-05-23 031923.png"
+              class="rounded"
               alt="Character Website"
               height="225"
               width="400"
