Fixed image width issue

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Date: 5/21/24
               <small class="text-muted">2014-2019</small>
             </h2>
           </div>
-          <div class="col-md-1 float-start ms-1">
+          <div class="col-md-1 float-start">
             <img src="imgs/ads.png" alt="Aaron Decker School" />
           </div>
         </div>
@@ -166,7 +166,7 @@ Date: 5/21/24
               <small class="text-muted">2019-2023</small>
             </h2>
           </div>
-          <div class="col-md-1 float-start ms-1">
+          <div class="col-md-1 float-start">
             <img
               src="imgs/rbs.jpg"
               class="rounded"
@@ -185,7 +185,7 @@ Date: 5/21/24
               <small class="text-muted">2023-2027</small>
             </h2>
           </div>
-          <div class="col-md-1 float-start ms-1">
+          <div class="col-md-1 float-start">
             <img
               src="imgs/mcst.png"
               alt="Morris County School of Technology"
@@ -206,7 +206,7 @@ Date: 5/21/24
           </div>
         </div>
         <div class="row">
-          <div class="btn-group col-md-3">
+          <div class="btn-group col-11 col-md-3">
             <a href="https://github.com/RyanKhieu" class="btn btn-dark">
               <i class="bi bi-github"></i> GitHub
             </a>
@@ -228,10 +228,10 @@ Date: 5/21/24
               JavaScript using p5.js and p5play. Website made with HTML.
             </p>
           </div>
-          <div class="col-md-3 float-start ms-1">
+          <div class="col-md-9 float-start">
             <img
               src="imgs/Screenshot 2024-05-23 025506.png"
-              class="rounded"
+              class="rounded img-fluid"
               alt="Bouncing Balls"
               height="225"
               width="400"
@@ -250,10 +250,10 @@ Date: 5/21/24
               from a vocaloid software.
             </p>
           </div>
-          <div class="col-md-3 float-start ms-1">
+          <div class="col-md-9 float-start">
             <img
               src="imgs/Screenshot 2024-05-23 031923.png"
-              class="rounded"
+              class="rounded img-fluid"
               alt="Character Website"
               height="225"
               width="400"
